--- a/custom_components/xtherma_fp/manifest.json
+++ b/custom_components/xtherma_fp/manifest.json
@@ -10,5 +10,8 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/Xtherma/xtherma_ha/issues",
   "quality_scale": "bronze",
+  "requirements": [
+    "pymodbus>=3.9.0"
+  ],
   "version": "1.3.5"
 }
