--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,39 +33,8 @@ jobs:
         run: |
           pre-commit run --all-files --show-diff-on-failure --color=always
 
-      - name: Run pytest
-        run: |
-          python -m pytest --timeout=10 tests
-
-  compatibility:
-    name: HA ${{ matrix.ha-version }}
-    runs-on: "ubuntu-latest"
-
-    strategy:
-      max-parallel: 1
-      fail-fast: false
-      matrix:
-        ha-version: ["2025.7.1", "latest"]
-
-    steps:
-      - name: Check out the repository
-        uses: actions/checkout@v6
-
-      - name: Set up Python ${{ env.DEFAULT_PYTHON }}
-        uses: actions/setup-python@v6
-        with:
-          python-version: ${{ env.DEFAULT_PYTHON }}
-
-      - name: Install Python requirements
-        run: |
-          pip install --upgrade -r requirements.txt -r dev-requirements.txt
-          pip uninstall -y homeassistant pytest-homeassistant-custom-component
-          if [ "${{ matrix.ha-version }}" = "latest" ]; then
-            pip install --upgrade homeassistant
-          else
-            pip install --upgrade "homeassistant==${{ matrix.ha-version }}"
-          fi
-          pip install pytest-homeassistant-custom-component
+      - name: Debug Dependencies
+        run: pip freeze
 
       - name: Run pytest
         run: |
